# BattleCity

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: cocoa_init.m.51BD2ED7440E8231.idx  cocoa_joystick.h.0345071CEF69ABF4.idx  cocoa_joystick.m.1436E04000977F3E.idx  cocoa_monitor.m.562EF12E8DB4A58E.idx  cocoa_platform.h.1AADB8C085CCF177.idx  cocoa_time.c.D49BA97226E68CDA.idx  cocoa_time.h.7966F9077D862180.idx  cocoa_window.m.4A24C20054BA51A0.idx  context.c.29F51545CE01EB83.idx  egl_context.c.2F31C2BCEB750701.idx  glad.c.56C0676BA13F34BE.idx  glad.h.E7DD7811E005F199.idx  glfw3.h.5B2A392C5E8E9E05.idx  glfw3native.h.09F4DFE7E191E7F0.idx  init.c.80FB9B8FDC95B15E.idx  input.c.1D1A6FFB53EAA1AD.idx  internal.h.F1D1075BB6F93C27.idx  khrplatform.h.69EF030C36EFBC2E.idx  main.cpp.4E4C745419B343F6.idx  mappings.h.33B962034FA6938D.idx  monitor.c.0F9379C3EB25F7BF.idx  nsgl_context.m.2277C679D0232715.idx  null_init.c.E5E187A98E3B6E86.idx  null_joystick.c.548BCEF6276810FD.idx  null_joystick.h.417156DB93A50A13.idx  null_monitor.c.9CF6973449FE1B26.idx  null_platform.h.7E1ABD09276EF783.idx  null_window.c.69AC1B9402368052.idx  osmesa_context.c.59B4A98C915F8F33.idx  platform.c.F4FBA21EFFA4FFED.idx  platform.h.76CB0AAB3E5BF5EE.idx  posix_module.c.11B7B7396C5D2CE0.idx  posix_thread.c.69DD79EB511E181F.idx  posix_thread.h.B66F47BC4474C198.idx  vulkan.c.0683969957D53839.idx  (+1 more)
includes/: camera.hpp  glmlearn.cpp  object.hpp  omanager.hpp  osphere.hpp  shader.h  shader.hpp
shaders/: fShader.fs  vShader.vs
src/: main.cpp
src/includes/: shader.h
